--- a/Programming/Python_basics/python_basics.ipynb
+++ b/Programming/Python_basics/python_basics.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
     "# Biggest Title\n",
     "## Second\n",
     "### Third\n",
@@ -4285,19 +4287,485 @@
    "outputs": [],
    "source": [
     "a = [1,2,3,4]\n",
-    "names = ['Jhon','Susan','Mary','Batman']\n"
+    "names = ['Jhon','Susan','Mary','Batman']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on list object:\n",
+      "\n",
+      "class list(object)\n",
+      " |  list(iterable=(), /)\n",
+      " |  \n",
+      " |  Built-in mutable sequence.\n",
+      " |  \n",
+      " |  If no argument is given, the constructor creates a new empty list.\n",
+      " |  The argument must be an iterable if specified.\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __add__(self, value, /)\n",
+      " |      Return self+value.\n",
+      " |  \n",
+      " |  __contains__(self, key, /)\n",
+      " |      Return key in self.\n",
+      " |  \n",
+      " |  __delitem__(self, key, /)\n",
+      " |      Delete self[key].\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getitem__(...)\n",
+      " |      x.__getitem__(y) <==> x[y]\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __iadd__(self, value, /)\n",
+      " |      Implement self+=value.\n",
+      " |  \n",
+      " |  __imul__(self, value, /)\n",
+      " |      Implement self*=value.\n",
+      " |  \n",
+      " |  __init__(self, /, *args, **kwargs)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __mul__(self, value, /)\n",
+      " |      Return self*value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __reversed__(self, /)\n",
+      " |      Return a reverse iterator over the list.\n",
+      " |  \n",
+      " |  __rmul__(self, value, /)\n",
+      " |      Return value*self.\n",
+      " |  \n",
+      " |  __setitem__(self, key, value, /)\n",
+      " |      Set self[key] to value.\n",
+      " |  \n",
+      " |  __sizeof__(self, /)\n",
+      " |      Return the size of the list in memory, in bytes.\n",
+      " |  \n",
+      " |  append(self, object, /)\n",
+      " |      Append object to the end of the list.\n",
+      " |  \n",
+      " |  clear(self, /)\n",
+      " |      Remove all items from list.\n",
+      " |  \n",
+      " |  copy(self, /)\n",
+      " |      Return a shallow copy of the list.\n",
+      " |  \n",
+      " |  count(self, value, /)\n",
+      " |      Return number of occurrences of value.\n",
+      " |  \n",
+      " |  extend(self, iterable, /)\n",
+      " |      Extend list by appending elements from the iterable.\n",
+      " |  \n",
+      " |  index(self, value, start=0, stop=9223372036854775807, /)\n",
+      " |      Return first index of value.\n",
+      " |      \n",
+      " |      Raises ValueError if the value is not present.\n",
+      " |  \n",
+      " |  insert(self, index, object, /)\n",
+      " |      Insert object before index.\n",
+      " |  \n",
+      " |  pop(self, index=-1, /)\n",
+      " |      Remove and return item at index (default last).\n",
+      " |      \n",
+      " |      Raises IndexError if list is empty or index is out of range.\n",
+      " |  \n",
+      " |  remove(self, value, /)\n",
+      " |      Remove first occurrence of value.\n",
+      " |      \n",
+      " |      Raises ValueError if the value is not present.\n",
+      " |  \n",
+      " |  reverse(self, /)\n",
+      " |      Reverse *IN PLACE*.\n",
+      " |  \n",
+      " |  sort(self, /, *, key=None, reverse=False)\n",
+      " |      Stable sort *IN PLACE*.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data and other attributes defined here:\n",
+      " |  \n",
+      " |  __hash__ = None\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(a)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__delitem__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__iadd__',\n",
+       " '__imul__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__reversed__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__setitem__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'append',\n",
+       " 'clear',\n",
+       " 'copy',\n",
+       " 'count',\n",
+       " 'extend',\n",
+       " 'index',\n",
+       " 'insert',\n",
+       " 'pop',\n",
+       " 'remove',\n",
+       " 'reverse',\n",
+       " 'sort']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function append:\n",
+      "\n",
+      "append(object, /) method of builtins.list instance\n",
+      "    Append object to the end of the list.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(a.append)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function pop:\n",
+      "\n",
+      "pop(index=-1, /) method of builtins.list instance\n",
+      "    Remove and return item at index (default last).\n",
+      "    \n",
+      "    Raises IndexError if list is empty or index is out of range.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(a.pop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function remove:\n",
+      "\n",
+      "remove(value, /) method of builtins.list instance\n",
+      "    Remove first occurrence of value.\n",
+      "    \n",
+      "    Raises ValueError if the value is not present.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(a.remove)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function extend:\n",
+      "\n",
+      "extend(iterable, /) method of builtins.list instance\n",
+      "    Extend list by appending elements from the iterable.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(a.extend)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.extend(names)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 3,\n",
+       " 4,\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [i for i in a if i!=5]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.pop(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3,\n",
+       " 4,\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3,\n",
+       " 4,\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 'Jhon',\n",
+       " 'Susan',\n",
+       " 'Mary',\n",
+       " 'Batman',\n",
+       " 5]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.append(5)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -4306,7 +4774,7 @@
        "[1, 2, 3, 4, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
